Bug 390509 - Not possible to select notes under a fragment widget in sequence diagrams
Summary: Not possible to select notes under a fragment widget in sequence diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.24.1 (KDE Applications 17.12.1)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-15 15:39 UTC by Ralf Habacker
Modified: 2018-02-16 09:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.24.3 (KDE Applications 17.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2018-02-15 15:39:49 UTC
Fragment widgets in sequences diagrams are normally used to group several messages into a logical group. Unfortunally if a note widget is placed under a fragment widget the note could not be selected. 

How to reproduce:
1. start umbrello
2. add a sequence diagram
3. add a fragment widget e.g a loop widget
4. add a note inside the area of the fragment widget
5. try to select the note

What happens ?
The note could not be selected

What is expected ?
The note should be selectable

Additional notes:
A similar behavior is present for object and box widgets
Comment 1 Ralf Habacker 2018-02-16 09:50:09 UTC
Git commit 45d667bbbf1989a511a5e99621e250007ed99270 by Ralf Habacker.
Committed on 16/02/2018 at 09:49.
Pushed by habacker into branch 'Applications/17.12'.

Fix 'Not possible to select notes under a fragment widget in sequence diagrams'

- remove suspicious code handing of setting z value in UMLWidget::setSelected()
  which should be always handled in toForeground()
- disable foreground handling for CombinedFragmentWidget and BoxWidget
  by making toForeground() virtual and adding related overrides.
- set z value for CombinedFragmentWidget to the same level as BoxWidget

There is a remaining issue that a box widget cannot be selected if the
box widget is completly inside a combined fragment widget and created
before the combined fragment widget.
FIXED-IN:2.24.3 (KDE Applications 17.12.3)

M  +4    -0    umbrello/umlwidgets/boxwidget.cpp
M  +3    -0    umbrello/umlwidgets/boxwidget.h
M  +5    -0    umbrello/umlwidgets/combinedfragmentwidget.cpp
M  +1    -0    umbrello/umlwidgets/combinedfragmentwidget.h
M  +0    -8    umbrello/umlwidgets/umlwidget.cpp
M  +2    -1    umbrello/umlwidgets/umlwidget.h

https://commits.kde.org/umbrello/45d667bbbf1989a511a5e99621e250007ed99270