Fix 'Not possible to select notes under a fragment widget in sequence diagrams'

- remove suspicious code handing of setting z value in UMLWidget::setSelected()
  which should be always handled in toForeground()
- disable foreground handling for CombinedFragmentWidget and BoxWidget
  by making toForeground() virtual and adding related overrides.
- set z value for CombinedFragmentWidget to the same level as BoxWidget

There is a remaining issue that a box widget cannot be selected if the
box widget is completly inside a combined fragment widget and created
before the combined fragment widget.

BUG:390509
FIXED-IN:2.24.3 (KDE Applications 17.12.3)