umbrello/umlwidgets/umlwidget.cpp
@@ -1407,14 +1407,6 @@ void UMLWidget::setSelected(bool _select)
             UMLApp::app()->docWindow()->updateDocumentation(true);
     }
 
-    // TODO: isn't this handled by toForeground() ?
-    const QPoint pos(x(), y());
-    UMLWidget *bkgnd = m_scene->widgetAt(pos);
-    if (bkgnd && bkgnd != this && _select) {
-        DEBUG(DBG_SRC) << "setting Z to " << bkgnd->zValue() + 1.0 << ", SelectState: " << _select;
-        setZValue(bkgnd->zValue() + 1.0);
-    }
-
     update();
 
     // selection changed, we have to make sure the copy and paste items
